--- a/values.yaml
+++ b/values.yaml
@@ -22,6 +22,7 @@ deployment:
       memory: "128Mi"
       cpu: "500m"
   existingSecret: null
+  podAnnotations: null
 
 service:
   type: ClusterIP
